--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="5vE8SDwPE2Q3tGcuMEcxJ6mWQBZ6obCDdDh2qjLX6nA" />
   <title>Portfolio-Govind S Kumar</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
